--- a/src/CheckersView.css
+++ b/src/CheckersView.css
@@ -14,4 +14,8 @@
     width: 10%;
     height: 100%;
     background: grey;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
