--- a/src/components/Piece.css
+++ b/src/components/Piece.css
@@ -5,3 +5,17 @@
 .fa-dark {
     color: #252525;
 }
+
+.fa-light:hover,
+.fa-dark:hover {
+    cursor: pointer;
+}
+
+.Checkers__Square--Selected {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 255, 0, 0.3);
+}
